results/SVCOMP/specgen/log-astore_aload1-2024_02_24_05_26_03.txt
class astore_aload1 {
  //@ ensures \result == 10;
  public static void func() {
    int size = 10;
    boolean[] boolean_array = new boolean[size];
    byte[] byte_array = new byte[size];
    char[] char_array = new char[size];
    short[] short_array = new short[size];
    int[] int_array = new int[size];
    long[] long_array = new long[size];
    double[] double_array = new double[size];
    float[] float_array = new float[size];

    //@ maintaining 0 <= i && i <= size;
    //@ maintaining (\forall int k; 0 <= k && k < i; boolean_array[k] == (i % 2 == 0));
    //@ maintaining (\forall int k; 0 <= k && k < i; byte_array[k] == (byte)k);
    //@ maintaining (\forall int k; 0 <= k && k < i; char_array[k] == (char)k);
    //@ maintaining (\forall int k; 0 <= k && k < i; short_array[k] == (short)k);
    //@ maintaining (\forall int k; 0 <= k && k < i; int_array[k] == k);
    //@ maintaining (\forall int k; 0 <= k && k < i; long_array[k] == (long)k);
    //@ maintaining (\forall int k; 0 <= k && k < i; double_array[k] == (double)k);
    //@ maintaining (\forall int k; 0 <= k && k < i; float_array[k] == (float)k);
    //@ decreases size - i;
    for (int i = 0; i < size; i++) {
      boolean tmp = false;
      if (i % 2 == 0) {
        tmp = true;
      }
      boolean_array[i] = tmp;
      byte_array[i] = (byte) i;
      char_array[i] = (char) i;
      short_array[i] = (short) i;
      int_array[i] = i;
      long_array[i] = (long) i;
      double_array[i] = (double) i;
      float_array[i] = (float) i;
    }

    //@ assert boolean_array.length == 10;
    //@ assert boolean_array[0];
    //@ assert !boolean_array[1];
    //@ assert boolean_array[2];
    //@ assert !boolean_array[3];
    //@ assert boolean_array[4];
    //@ assert !boolean_array[5];
    //@ assert boolean_array[6];
    //@ assert !boolean_array[7];
    //@ assert boolean_array[8];
    //@ assert !boolean_array[9];
    //@ assert byte_array.length == 10;
    //@ assert byte_array[0] == (byte) 0;
    //@ assert byte_array[1] == (byte) 1;
    //@ assert byte_array[2] == (byte) 2;
    //@ assert byte_array[3] == (byte) 3;
    //@ assert byte_array[4] == (byte) 4;
    //@ assert byte_array[5] == (byte) 5;
    //@ assert byte_array[6] == (byte) 6;
    //@ assert byte_array[7] == (byte) 7;
    //@ assert byte_array[8] == (byte) 8;
    //@ assert byte_array[9] == (byte) 9;
    //@ assert short_array.length == 10;
    //@ assert short_array[0] == (short) 0;
    //@ assert short_array[1] == (short) 1;
    //@ assert short_array[2] == (short) 2;
    //@ assert short_array[3] == (short) 3;
    //@ assert short_array[4] == (short) 4;
    //@ assert short_array[5] == (short) 5;
    //@ assert short_array[6] == (short) 6;
    //@ assert short_array[7] == (short) 7;
    //@ assert short_array[8] == (short) 8;
    //@ assert short_array[9] == (short) 9;
    //@ assert int_array.length == 10;
    //@ assert int_array[0] == 0;
    //@ assert int_array[1] == 1;
    //@ assert int_array[2] == 2;
    //@ assert int_array[3] == 3;
    //@ assert int_array[4] == 4;
    //@ assert int_array[5] == 5;
    //@ assert int_array[6] == 6;
    //@ assert int_array[7] == 7;
    //@ assert int_array[8] == 8;
    //@ assert int_array[9] == 9;
    //@ assert long_array.length == 10;
    //@ assert long_array[0] == 0L;
    //@ assert long_array[1] == 1L;
    //@ assert long_array[2] == 2L;
    //@ assert long_array[3] == 3L;
    //@ assert long_array[4] == 4L;
    //@ assert long_array[5] == 5L;
    //@ assert long_array[6] == 6L;
    //@ assert long_array[7] == 7L;
    //@ assert long_array[8] == 8L;
    //@ assert long_array[9] == 9L;
    //@ assert char_array.length == 10;
    //@ assert char_array[0] == (char) 0;
    //@ assert char_array[1] == (char) 1;
    //@ assert char_array[2] == (char) 2;
    //@ assert char_array[3] == (char) 3;
    //@ assert char_array[4] == (char) 4;
    //@ assert char_array[5] == (char) 5;
    //@ assert char_array[6] == (char) 6;
    //@ assert char_array[7] == (char) 7;
    //@ assert char_array[8] == (char) 8;
    //@ assert char_array[9] == (char) 9;
    //@ assert double_array.length == 10;
    //@ assert (int) double_array[0] == 0;
    //@ assert (int) double_array[1] == 1;
    //@ assert (int) double_array[2] == 2;
    //@ assert (int) double_array[3] == 3;
    //@ assert (int) double_array[4] == 4;
    //@ assert (int) double_array[5] == 5;
    //@ assert (int) double_array[6] == 6;
    //@ assert (int) double_array[7] == 7;
    //@ assert (int) double_array[8] == 8;
    //@ assert (int) double_array[9] == 9;
  }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:2: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == 10;
               ^
1 error

public class AstoreAload1 {
    //@ requires x > 0;
    //@ ensures \result == x * 2;
    public int multiplyByTwo(int x) {
        return x * 2;
    }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:1: error: class AstoreAload1 is public, should be declared in a file named AstoreAload1.java
public class AstoreAload1 {
       ^
1 error

// File: AstoreAload1.java

public class AstoreAload1 {
    //@ requires x > 0;
    //@ ensures \result == x * 2;
    public int multiplyByTwo(int x) {
        return x * 2;
    }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:3: error: class AstoreAload1 is public, should be declared in a file named AstoreAload1.java
public class AstoreAload1 {
       ^
1 error

// File: AstoreAload1.java

public class AstoreAload1 {
    //@ requires x > 0;
    //@ ensures \result == x * 2;
    public int multiplyByTwo(int x) {
        return x * 2;
    }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:3: error: class AstoreAload1 is public, should be declared in a file named AstoreAload1.java
public class AstoreAload1 {
       ^
1 error

// File: AstoreAload1.java

public class AstoreAload1 {
    //@ requires x > 0;
    //@ ensures \result == x * 2;
    public int multiplyByTwo(int x) {
        return x * 2;
    }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:3: error: class AstoreAload1 is public, should be declared in a file named AstoreAload1.java
public class AstoreAload1 {
       ^
1 error

// File: AstoreAload1.java

public class AstoreAload1 {
    //@ requires x > 0;
    //@ ensures \result == x * 2;
    public int multiplyByTwo(int x) {
        return x * 2;
    }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:3: error: class AstoreAload1 is public, should be declared in a file named AstoreAload1.java
public class AstoreAload1 {
       ^
1 error

// File: AstoreAload1.java

public class AstoreAload1 {
    //@ requires x > 0;
    //@ ensures \result == x * 2;
    public int multiplyByTwo(int x) {
        return x * 2;
    }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:3: error: class AstoreAload1 is public, should be declared in a file named AstoreAload1.java
public class AstoreAload1 {
       ^
1 error

// File: AstoreAload1.java

public class AstoreAload1 {
    //@ requires x > 0;
    //@ ensures \result == x * 2;
    public int multiplyByTwo(int x) {
        return x * 2;
    }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:3: error: class AstoreAload1 is public, should be declared in a file named AstoreAload1.java
public class AstoreAload1 {
       ^
1 error

// File: AstoreAload1.java

public class AstoreAload1 {
    //@ requires x > 0;
    //@ ensures \result == x * 2;
    public int multiplyByTwo(int x) {
        return x * 2;
    }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:3: error: class AstoreAload1 is public, should be declared in a file named AstoreAload1.java
public class AstoreAload1 {
       ^
1 error

// File: AstoreAload1.java

public class AstoreAload1 {
    //@ requires x > 0;
    //@ ensures \result == x * 2;
    public int multiplyByTwo(int x) {
        return x * 2;
    }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:3: error: class AstoreAload1 is public, should be declared in a file named AstoreAload1.java
public class AstoreAload1 {
       ^
1 error

